fixed github link, changed top border color, decreased spacing

--- a/css/main.css
+++ b/css/main.css
@@ -105,7 +105,7 @@ body {
 #colorTop {
     width: 100vw;
     height: 5px;
-    background-color: #c4c4c4;
+    background-color: #22E5FF;
 }
 
 a:hover {
@@ -119,7 +119,7 @@ h1,h2,h3,h4,h5 {
 
 #hero-title {
     margin-left: 15%;
-    margin-bottom: 25vh;
+    margin-bottom: 10vh;
     margin-top: 15vh;
     height: 20vh;
 }
